--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="wrapper">
+        <form class="wrapper">
             <h5>Sign Up</h5>
             <div class="input" >
                 <label>Email</label>
@@ -23,10 +23,10 @@
             </div>
             <div class="btn " >
                 <span id="status"  class="good_to_go" >All good to go!</span>
-                <button onclick="handleSubmit()" >Submit</button>
+                <button name="data" type="button"  onclick="handleSubmit()" >Submit</button>
 
             </div>
-        </div>
+        </form>
     </div>
     
     <script src="./script.js" ></script>
